--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">house-meter</string>
+    <string name="app_name">HouseMeter</string>
+    <string name="app_description">Gestión de pagos y deudas para condominios</string>
 </resources>
